--- a/style1.css
+++ b/style1.css
@@ -1,16 +1,20 @@
 #t1 {
     text-align: center;
-    background-image: url(imagem\ 1.jpg);
+    background-image: url(polar_bear.jpg);
+    background-size: 100%;
     padding-bottom: 20px; 
     background-position: center;
     border:5px rgb(8, 8, 73) ;
     background-color: rgb(8, 8, 73);
+    background-size: cover;
 }
+
 #b1 {
     font-family: Verdana, Tahoma, sans-serif;
     text-decoration: underline;
     color:rgb(8, 8, 73) ;
 }
+
 #b2 {
     border: 3px rgb(8, 8, 73) solid;
     padding: 10px 20px 10px 20px;
@@ -20,6 +24,7 @@
     border-radius: 20px 20px 20px 20px;
     
 }
+
 body {background-color: rgb(8, 49, 73);
 }
 
@@ -27,38 +32,43 @@ body {background-color: rgb(8, 49, 73);
     font-family: arial;
     color: rgb(8, 8, 73);
 }
+
 #b3 {
     position: absolute;
     left: 100px;
     top: 100px;
 }
+
 #b4 {
     position: relative;
     right: 100px;
     left: 700px;
     padding-right: 50px;
 }
+
 #t2 {
     background-image: url(pexeels.jpg);
 }
+
 #t3 {
     position: absolute;
     left: 100px;
-    
 }
+
 #b5 {
     font-family: Verdana, Tahoma, sans-serif;
     color: white;
     border-radius: 20px 20px 20px 20px;
     border: 3px white solid;
     background-color: grey;
-
 }
+
 #b6 {
     color: white;
     font-size: 20px;
     font-family: arial;
 }
+
 #b7 {
     color: white;
     text-align: center;
@@ -67,28 +77,29 @@ body {background-color: rgb(8, 49, 73);
     border: 3px white solid;
     background-color: grey;
     border-spacing: 5px;
-    
 }
+
 #b8 {
 position: relative;
     
     right: 600px;
     top:5px;
 }
+
 #b9 {
     font-size: 20px;
     color: white;
     font-family: arial;
-
 }
+
 #b10 {
     font-family: Tahoma;
     border-radius: 20px 0 20px 0;
     border: 3px white solid;
     background-color: grey;
     text-align: start;
-
 }
+
 #b11 {
     background-color: black;
     padding-top: 5px;
@@ -96,18 +107,169 @@ position: relative;
     padding: 5px 5px 5px 5px;
     font-size: 15px;
     font-family: arial;
-
 }
 
 #t4 {
     color: white;
 }
+
 #t6 {
     position: relative;
     left: 25%;
 }
+
 #t7 {
     border-radius: 20px 20px 20px 20px;
     border: 3px white solid;
     background-color: grey;
+}
+
+@media only screen and (max-width: 800px) {
+    
+    #t1 {
+            text-align: center;
+        background-image: url(imagem\ 1.jpg);
+        background-size: 100%;
+        padding-bottom: 20px; 
+        background-position: center;
+        border:5px rgb(8, 8, 73) ;
+        background-color: rgb(8, 8, 73);
+        background-size: cover;
+    }
+    
+    #t1a {  
+        background-size: cover;
+        width: "100%";
+        height:"auto";
+
+
+
+    }
+    
+    #b1 {
+        font-family: Verdana, Tahoma, sans-serif;
+        text-decoration: underline;
+        color:rgb(8, 8, 73) ;
+        font-size: 10vw;
+    }
+    
+    #b2 {
+        border: 3px rgb(8, 8, 73) solid;
+        padding: 10px 20px 10px 20px;
+        font-family: Tahoma;
+        background-color: rgb(72, 122, 216);
+        color: rgb(8, 8, 73) ;
+        border-radius: 20px 20px 20px 20px;
+        
+    }
+    
+    body {background-color: rgb(8, 49, 73);
+    }
+    
+    #b1a {
+        font-family: arial;
+        color: rgb(8, 8, 73);
+    }
+    
+    #b3 {
+        position: absolute;
+        left: 100px;
+        top: 100px;
+    }
+    
+    #b4 {
+        position: cover;
+        right: 100px;
+        left: 700px;
+        padding-right: 50px;
+        max-width: 100%;
+        height: auto;
+
+        
+
+        
+    }
+    
+    #t2 {
+        background-image: url(pexeels.jpg);
+        background-size: cover;
+    }
+    
+    #t3 {
+        position: cover;
+        width:"100%";
+        height:"auto";
+        
+    }
+    
+    #b5 {
+        font-family: Verdana, Tahoma, sans-serif;
+        color: white;
+        border-radius: 20px 20px 20px 20px;
+        border: 3px white solid;
+        background-color: grey;
+    }
+    
+    #b6 {
+        color: white;
+        font-size: 20px;
+        font-family: arial;
+    }
+    
+    #b7 {
+        color: white;
+        text-align: center;
+        font-family: Tahoma;
+        border-radius: 20px 20px 20px 20px;
+        border: 3px white solid;
+        background-color: grey;
+        border-spacing: 5px;
+    }
+    
+    #b8 {
+    position: relative;
+        
+        right: 600px;
+        top:5px;
+    }
+    
+    #b9 {
+        font-size: 20px;
+        color: white;
+        font-family: arial;
+    }
+    
+    #b10 {
+        font-family: Tahoma;
+        border-radius: 20px 0 20px 0;
+        border: 3px white solid;
+        background-color: grey;
+        text-align: start;
+    }
+    
+    #b11 {
+        background-color: black;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        padding: 5px 5px 5px 5px;
+        font-size: 15px;
+        font-family: arial;
+    }
+    
+    #t4 {
+        color: white;
+    }
+    
+    #t6 {
+        position: relative;
+        left: 25%;
+    }
+    
+    #t7 {
+        border-radius: 20px 20px 20px 20px;
+        border: 3px white solid;
+        background-color: grey;
+    }
+
+
 }
